--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*
 * {
     box-sizing: border-box;
 }
@@ -5,5 +6,20 @@
 * {
     transition: all 0.3s linear;
 }
+*/
 
 /*my style*/
+
+body>div.container{
+    background-color: red;
+    height: 500px;
+}
+
+.item {
+    height: 300px;
+    background-color: blue;
+}
+
+.item:nth-child(2n){
+    background-color:chartreuse;
+}
